# sub

ai-subtitle-translator/: README.md
ai-subtitle-translator/backend/: README.md  pyproject.toml
ai-subtitle-translator/backend/prompts/: translation_prompt_v1.md
ai-subtitle-translator/backend/src/subtitle_translator/: __init__.py  chunking.py  cleaning.py  cli.py  config.py  dedup.py  loaders.py  models.py  pipeline.py  prompts.py  providers.py  srt.py  validation.py
ai-subtitle-translator/backend/tests/: test_chunking.py  test_cleaning.py  test_cli.py  test_dedup.py  test_loaders.py  test_pipeline.py  test_srt.py  test_validation.py
ai-subtitle-translator/backend/tests/fixtures/: rolling_auto.json3.json  sample.json3.json  sample.srt  sample.vtt
ai-subtitle-translator/docs/: PHASE0_EXPERIMENT_NOTES.md  PHASE1_TRANSLATION_ENGINE_NOTES.md  PRD.md  roadmap.md  technical-architecture.md
ai-subtitle-translator/extension/: README.md  manifest.json  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
ai-subtitle-translator/extension/scripts/: copy-static.mjs
ai-subtitle-translator/extension/src/: background.ts  content.ts  mainWorldExtractor.ts  normalize.ts  popup.ts
ai-subtitle-translator/extension/tests/: normalize.test.ts
ai-subtitle-translator/extension/tests/fixtures/: synthetic-auto-json3.json  synthetic-manual-json3.json
