[project]
name = "subtitle-translator"
version = "0.1.0"
description = "Phase 1 — standalone CLI translation engine (English subtitle cues -> natural Persian SRT). No FastAPI, no SQLite, no server."
requires-python = ">=3.10"
# The core engine and its test suite have ZERO required third-party deps —
# they run offline with the built-in MockProvider. The real online provider
# needs the `anthropic` SDK, declared as an optional extra so `pip install`
# and the offline tests don't require it.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
subtitle-translate = "subtitle_translator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
